# vllm-mlx

./: .gitignore  BENCHMARK_M1_MAX_64GB.md  README.md  build_binary.py  build_cxfreeze.py  build_nuitka.py  entry_point.py
app/: .gitignore  index.html  package-lock.json  package.json  vite.config.ts
app/src/: App.css  App.tsx  index.css  main.tsx
app/src-tauri/: Cargo.toml  tauri.conf.json
app/src-tauri/icons/: icon.icns
app/src-tauri/src/: lib.rs  main.rs
tests/: test_continuous_batching.py  test_prefix_cache.py
vllm_mlx/: cli.py  scheduler.py  server.py  server_v2.py
vllm_mlx/models/: mllm.py
